12/15/2022 - reworded stuff on the main page - changed all the <a> tags to '_blank' targets (open in new tab rather than on same tab) - for contests w/ multiple coaches, reorganized those pages - added spelling meeting dates and adjusted table - fixed schedule highlight + inva location technically this commit is like a day early due to USACO but whatever

--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -17,8 +17,11 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font> or 
-					Andrew Bourinski <font size="+1"><u>andrew.bourinski@student.allenisd.org</u></font></h2>
+				<h2>Points of Contact: <ul>
+					<li> Andrew Bourinski <font size="+1"><u>andrew.bourinski@student.allenisd.org</u></font> </li>
+					<li> Pratham Patel <font size="+1"><u>pratham.patel@student.allenisd.org</u></font> </li>
+					<li> Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font> </li>
+				</h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>You remember BIM class from middle school? That class alongside some studying might make you a great 
@@ -44,9 +47,9 @@
 						<h4>Resources</h4>
 						<ul>
 							<li><a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" 
-								style="color:#e0533d">2022 Starter Files</a></li>
+								style="color:#e0533d" target="_blank">2022 Starter Files</a></li>
 							<li><a href="https://www.uiltexas.org/files/academics/UIL-HOW-TO-BUILD-A-DATABASE-VIDEO.mp4" 
-								style="color:#e0533d">How to Database</a></li>
+								style="color:#e0533d" target="_blank">How to Database</a></li>
 						</ul>
 					</section>
 				</div>
