--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -57,24 +57,26 @@
 							<li>Basics of Java</li>
 								<ul>
 								<li><a href="https://www.codecademy.com/learn/learn-java" 
-									style="color:#e0533d">Codecademy</a>
+									style="color:#e0533d" target="_blank">Codecademy</a>
 								<li><a href="https://www.w3schools.com/java/default.asp" 
-									style="color:#e0533d">W3</a>
+									style="color:#e0533d" target="_blank">W3</a>
 								<li><a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
-									style="color:#e0533d">Java Docs (not as basic)</a>
+									style="color:#e0533d" target="_blank">Java Docs (not as basic)</a>
 								</ul>
 							<li>Written:</li>
 								<ul>
 								<li><a href="https://www.uiltexas.org/files/academics/UILCS-JavaTopicList2223.pdf" 
-									style="color:#e0533d">UIL's Topic List</a></li>
+									style="color:#e0533d" target="_blank">UIL's Topic List</a></li>
 								<li><a href="https://docs.google.com/document/d/1U0GO6L9AxU2b2lgWdYw47nzienkIDuL-GcJ6KL5jc88/edit?usp=sharing" 
-									style="color:#e0533d">Google Docs Review Sheet</a> 
+									style="color:#e0533d" target="_blank">Google Docs Review Sheet</a> 
 									(comment permissions are enabled)</li>
 								</ul>
-							<li>Prog:</li>
+							<li>Programming:</li>
 								<ul>
-								<li><a href="https://codeforces.com/" style="color:#e0533d">Codeforces</a></li>
-								<li><a href="http://www.usaco.org/" style="color:#e0533d">USACO</a></li>
+								<li><a href="https://codeforces.com/" style="color:#e0533d" 
+									target="_blank">Codeforces</a></li>
+								<li><a href="http://www.usaco.org/" style="color:#e0533d" 
+									target="_blank">USACO</a></li>
 								</ul>
 							
 						</ul>
