--- a/desc/current_events.html
+++ b/desc/current_events.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Point of Contact: Veda Kutagula <font size="+1"><u>veda.kutagula@student.allenisd.org</u></font></h2>
+				<h2>Coach: Veda Kutagula <font size="+1"><u>veda.kutagula@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Current Events is a test that quizzes students on their knowledge of events from approximately the 
@@ -45,31 +45,31 @@
 								style="color:#e0533d">Current Events Twitter</a></li>
 							<li>Recommended Sites and Sources:
 								<ul>
-									<li><a href="https://www.texastribune.org/" style="color:#e0533d">
+									<li><a href="https://www.texastribune.org/" style="color:#e0533d" target="_blank">
 										Texas Tribune</a></li>
-									<li><a href="http://www.mystatesman.com/" style="color:#e0533d">
+									<li><a href="http://www.mystatesman.com/" style="color:#e0533d" target="_blank">
 										Austin American-Statesman</a></li>
-									<li><a href="https://www.dallasnews.com/" style="color:#e0533d">
+									<li><a href="https://www.dallasnews.com/" style="color:#e0533d" target="_blank">
 										Dallas Morning News</a></li>
-									<li><a href="http://www.chron.com/" style="color:#e0533d">
+									<li><a href="http://www.chron.com/" style="color:#e0533d" target="_blank">
 										Houston Chronicle</a></li>
-									<li><a href="https://www.nytimes.com/" style="color:#e0533d">
+									<li><a href="https://www.nytimes.com/" style="color:#e0533d" target="_blank">
 										New York Times</a></li>
-									<li><a href="https://www.washingtonpost.com/" style="color:#e0533d">
+									<li><a href="https://www.washingtonpost.com/" style="color:#e0533d" target="_blank">
 										Washington Post</a></li>
-									<li><a href="https://www.usatoday.com/" style="color:#e0533d">
+									<li><a href="https://www.usatoday.com/" style="color:#e0533d" target="_blank">
 										USA Today</a></li>
-									<li><a href="http://www.bbc.com/news" style="color:#e0533d">
+									<li><a href="http://www.bbc.com/news" style="color:#e0533d" target="_blank">
 										BBC</a></li>
-									<li><a href="http://www.pbs.org/newshour/" style="color:#e0533d">
+									<li><a href="http://www.pbs.org/newshour/" style="color:#e0533d" target="_blank">
 										PBS News Hour</a></li>
-									<li><a href="http://www.npr.org/" style="color:#e0533d">
+									<li><a href="http://www.npr.org/" style="color:#e0533d" target="_blank">
 										National Public Radio</a></li>
-									<li><a href="http://www.cnn.com/" style="color:#e0533d">
+									<li><a href="http://www.cnn.com/" style="color:#e0533d" target="_blank">
 										CNN</a></li>
-									<li><a href="http://www.msnbc.com/" style="color:#e0533d">
+									<li><a href="http://www.msnbc.com/" style="color:#e0533d" target="_blank">
 										MSNBC</a></li>
-									<li><a href="http://www.foxnews.com/" style="color:#e0533d">
+									<li><a href="http://www.foxnews.com/" style="color:#e0533d" target="_blank">
 										Fox News</a></li>
 								<ul>
 							</li>
