--- a/desc/literary_criticism.html
+++ b/desc/literary_criticism.html
@@ -38,7 +38,7 @@
 						<h4>Resources</h4>
 						<ul>
 							<li><a href="https://www.uiltexas.org/files/academics/RL2022-20231.pdf" 
-								style="color:#e0533d">2022-2023 Reading List</a></li>
+								style="color:#e0533d" target="_blank">2022-2023 Reading List</a></li>
 						</ul>
 					</section>
 				</div>
