--- a/desc/science.html
+++ b/desc/science.html
@@ -54,14 +54,15 @@
 
 						<h4>Resources</h4>
 							<li><a href="https://docs.google.com/document/d/1IGtNLeaih5Dkkjaq_052apVOUmgKNyYujydRHWnM_uw/edit?usp=sharing" 
-								style="color:#e0533d">AP Bio from Warith's 21/22 BILL</a> 
+								style="color:#e0533d" target="_blank">AP Bio from Warith's 21/22 BILL</a> 
 								(comment permissions are enabled)</li>
 							<li><a href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
-								style="color:#e0533d">AP Chem Notes</a> (some docs are not viewable w/o AISD account)</li>
+								style="color:#e0533d" target="_blank">AP Chem Notes</a> 
+								(some docs are not viewable w/o AISD account)</li>
 							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
 								by Richard Feynman</li>
 							<li><a href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
-								style="color:#e0533d">2022-2023 Physics Topic List</a></li>
+								style="color:#e0533d" target="_blank">2022-2023 Physics Topic List</a></li>
 					</section>
 				</div>
 			</div>
