--- a/desc/social_studies.html
+++ b/desc/social_studies.html
@@ -37,7 +37,8 @@
 						<h4>Resources</h4>
 						<ul>
 							<li><a href="https://www.uiltexas.org/files/academics/FINAL_2022-2023_Social_Studies_Reading_List_and_Terms_8_1_22_(2).pdf" 
-								style="color:#e0533d">2022-2023 Reading List (WWI to the Great Depression)</a></li>
+								style="color:#e0533d" target="_blank">2022-2023 Reading List (WWI to the Great Depression)
+								</a></li>
 						</ul>
 					</section>
 				</div>
