--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -48,12 +48,14 @@
 							<li>Knowts Flashcards for...</li>
 							<ul>
 								<li><a href="https://knowt.io/flashcards/e23feedd-e52e-42cc-996d-64d91e2f6724" 
-									style="color:#e0533d">Primary Definitions</a></li>
+									style="color:#e0533d" target="_blank">Primary Definitions</a></li>
 								<li><a href="https://knowt.io/flashcards/71ae47f9-7232-471a-8d49-52b8702bf120" 
-									style="color:#e0533d">Alternate Definitions</a></li>
+									style="color:#e0533d" target="_blank">Alternate Definitions</a></li>
 								<li><a href="https://knowt.io/flashcards/e59ef794-d670-4bb8-880a-8b0498ac14d7" 
-									style="color:#e0533d">Irregular Plural Forms</a></li>
+									style="color:#e0533d" target="_blank">Irregular Plural Forms</a></li>
 							</ul>
+							<li><a href="https://eyangch.github.io/uil-spelling/" style="color: #e0533d" 
+								target="_blank">Practice Site</a> (at least, until we get ASW)</li>
 						</ul>
 					</section>
 				</div>
