--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
 						<h2>How are teams for District (and beyond) decided?</h2>
 						<p>As I mentioned, we have both practice meetings and interschool competitions throughout the year. As 
 						these progress, our coaches work together to pick the best of the best from all our competitors. With 
-						some exceptions, each team sent to Districts will typically have 4 people (Computer Apps has 3 and Science 
-						has 6 for example). These teams are typically announced the week after Spring Break, about 2 weeks prior 
-						to Districts.</p>
+						some exceptions, each team sent to Districts will typically have 4 people (exceptions include 3 in Computer 
+						Apps and 6 in Science). These teams are typically announced the week after Spring Break, about 2 weeks 
+						prior to Districts.</p>
 						<p>These people then represent us at our District meet. The top 3 individuals and the top team in each 
 						category get the honor of advancing to Regionals, and the same advancement rules apply to get to State. 
-						If you're wondering, it is possible to get into multiple teams (the guy who made this website is literally 
-						in 6 of them for example).</p>
+						It's even possible to get into multiple teams (even up to 6 different ones!).</p>
 						<br>
 						<h2>Can I still participate even if I don't think I'm good enough?</h2>
 						<p>Whether you think you're good or not, I think you should still try to give this a shot to see how it 
