--- a/sched.html
+++ b/sched.html
@@ -30,12 +30,11 @@
 							</tr>
 							<tr>
 								<td><u>Computer Science</u><br>Lowery Lower E Pod<br>*Every Other Week</td>
-								<td><u>Science</u><br>Lowery Lower E Pod</td>
+								<td rowspan="2"><u>Science</u><br>Lowery Lower E Pod</td>
 								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ B110</td>
 							</tr>
 							<tr>
-								<td></td>
-								<td></td>
+								<td><u>Spelling</u><br>AHS @ F224</td>
 								<td><u>Current Events</u><br>Lowery Lower E Pod</td>
 							</tr>
 						</table>
@@ -57,17 +56,13 @@
 								<td><b><u>AMC 10/12 B</u></b></td>
 								<td>11/16</td>
 							</tr>
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#2</b></td>
 								<td>11/14 - 12/10</td>
 							</tr>
-							<tr>
+							<tr class="progress">
 								<td><b><u>USACO December</u></b></td>
 								<td>12/16 - 12/19</td>
-							</tr>
-							<tr>
-								<td><b>Invitational A</b></td>
-								<td>1/7 @ Princeton HS</td>
 							</tr>
 							<tr>
 								<td><b>VC#3</b></td>
@@ -76,6 +71,10 @@
 							<tr>
 								<td><b><u>USACO January</u></b></td>
 								<td>1/27 - 1/30</td>
+							</tr>
+							<tr>
+								<td><b>Invitational A</b></td>
+								<td>1/28 @ Flower Mound 9th Grade Campus</td>
 							</tr>
 							<tr>
 								<td><b><u>USABO Open Round</u></b></td>
