--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -71,17 +71,17 @@
 						<h4>Resources</h4>
 						<ul>
 							<li><a href="https://www.uiltexas.org/files/academics/journalism/Copy_editing_21-22b.pdf" 
-								style="color:#e0533d">Copy Editing PPT</a></li>
+								style="color:#e0533d" target="_blank">Copy Editing PPT</a></li>
 							<li><a href="https://www.uiltexas.org/files/academics/journalism/Editorial2021.pdf" 
-								style="color:#e0533d">Editorial Writing PPT</a></li>
+								style="color:#e0533d" target="_blank">Editorial Writing PPT</a></li>
 							<li><a href="https://www.uiltexas.org/files/academics/journalism/feature_2021.pdf" 
-								style="color:#e0533d">Feature Writing PPT</a></li>
+								style="color:#e0533d" target="_blank">Feature Writing PPT</a></li>
 							<li><a href="https://www.uiltexas.org/files/academics/journalism/2021head.ppt" 
-								style="color:#e0533d">Headling Writing PPT</a></li>
+								style="color:#e0533d" target="_blank">Headling Writing PPT</a></li>
 							<li><a href="https://www.uiltexas.org/files/academics/journalism/2021_Newswritingedit.pdf" 
-								style="color:#e0533d">News Writing PPT</a></li>
+								style="color:#e0533d" target="_blank">News Writing PPT</a></li>
 							<li>:<a href="https://www.uiltexas.org/files/academics/4A-ready_writing_state_champ_06.pdf" 
-								style="color:#e0533d">2016 4A State Champion Ready Writing Essay</a></li>
+								style="color:#e0533d" target="_blank">2016 4A State Champion Ready Writing Essay</a></li>
 						</ul>
 					</section>
 				</div>
