--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -57,11 +57,11 @@
 							<li>Basics of Java</li>
 								<ul>
 								<li><a href="https://www.codecademy.com/learn/learn-java" 
-									style="color:#e0533d" target="_blank">Codecademy</a>
+									style="color:#e0533d" target="_blank">Codecademy</a></li>
 								<li><a href="https://www.w3schools.com/java/default.asp" 
-									style="color:#e0533d" target="_blank">W3</a>
+									style="color:#e0533d" target="_blank">W3</a></li>
 								<li><a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
-									style="color:#e0533d" target="_blank">Java Docs (not as basic)</a>
+									style="color:#e0533d" target="_blank">Java Docs</a> (not as basic)</li>
 								</ul>
 							<li>Written:</li>
 								<ul>
