--- a/desc/science.html
+++ b/desc/science.html
@@ -58,7 +58,7 @@
 								(comment permissions are enabled)</li>
 							<li><a href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
 								style="color:#e0533d" target="_blank">AP Chem Notes</a> 
-								(some docs are not viewable w/o AISD account)</li>
+								(some docs are not viewable w/o logging into AISD email)</li>
 							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
 								by Richard Feynman</li>
 							<li><a href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
