--- a/sched.html
+++ b/sched.html
@@ -60,7 +60,7 @@
 								<td><b>VC#2</b></td>
 								<td>11/14 - 12/10</td>
 							</tr>
-							<tr class="progress">
+							<tr class="complete">
 								<td><b><u>USACO December</u></b></td>
 								<td>12/16 - 12/19</td>
 							</tr>
@@ -102,7 +102,7 @@
 							</tr>
 							<tr>
 								<td><b><u>Local Chemistry Olympiad</u></b></td>
-								<td>TBA, between 3/1 and 3/31</td>
+								<td>TBA, typically late March</td>
 							</tr>
 							<tr>
 								<td><b><u>USABO Semifinals</u></b></td>
@@ -110,7 +110,7 @@
 							</tr>
 							<tr>
 								<td><b>UIL Districts</b></td>
-								<td>3/23 - 3/25</td>
+								<td>3/23 - 3/25 @ Rock Hill HS (most likely)</td>
 							</tr>
 							<tr>
 								<td><b><u>USACO US Open</u></b></td>
@@ -130,7 +130,7 @@
 							</tr>
 							<tr>
 								<td><b>UIL Regionals</b></td>
-								<td>4/21 - 4/22</td>
+								<td>4/21 - 4/22 @ Rock Hill HS</td>
 							</tr>
 							<tr>
 								<td><b>VC State</b></td>
@@ -138,7 +138,7 @@
 							</tr>
 							<tr>
 								<td><b>UIL State</b></td>
-								<td>5/17 - 5/18</td>
+								<td>5/17 - 5/18 @ UT Austin</td>
 							</tr>
 						</table>
 					</section>
