Fixed CSS + added a bit of new stuff

--- a/desc/accounting.html
+++ b/desc/accounting.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Accounting</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color:#fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
