--- a/desc/computer_applications.html
+++ b/desc/computer_applications.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Computer Applications</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color:#fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -46,10 +46,11 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li><a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" 
-								style="color:#e0533d" target="_blank">2022 Starter Files</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/2022-Starter-Files.zip" target="_blank">2022 
+								Starter Files</a></li>
+
 							<li><a href="https://www.uiltexas.org/files/academics/UIL-HOW-TO-BUILD-A-DATABASE-VIDEO.mp4" 
-								style="color:#e0533d" target="_blank">How to Database</a></li>
+								target="_blank">How to Database</a></li>
 						</ul>
 					</section>
 				</div>
