--- a/desc/computer_science.html
+++ b/desc/computer_science.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Computer Science</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color:#fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -56,27 +56,29 @@
 						<ul>
 							<li>Basics of Java</li>
 								<ul>
-								<li><a href="https://www.codecademy.com/learn/learn-java" 
-									style="color:#e0533d" target="_blank">Codecademy</a></li>
-								<li><a href="https://www.w3schools.com/java/default.asp" 
-									style="color:#e0533d" target="_blank">W3</a></li>
-								<li><a href="https://docs.oracle.com/en/java/javase/17/docs/api/" 
-									style="color:#e0533d" target="_blank">Java Docs</a> (not as basic)</li>
+								<li><a href="https://www.codecademy.com/learn/learn-java" target="_blank">Codecademy
+									</a></li>
+
+								<li><a href="https://www.w3schools.com/java/default.asp" target="_blank">W3</a></li>
+
+								<li><a href="https://docs.oracle.com/en/java/javase/17/docs/api/" target="_blank">Java Docs
+									</a> (not as basic)</li>
 								</ul>
 							<li>Written:</li>
 								<ul>
 								<li><a href="https://www.uiltexas.org/files/academics/UILCS-JavaTopicList2223.pdf" 
-									style="color:#e0533d" target="_blank">UIL's Topic List</a></li>
+									target="_blank">UIL's Topic List</a></li>
+
 								<li><a href="https://docs.google.com/document/d/1U0GO6L9AxU2b2lgWdYw47nzienkIDuL-GcJ6KL5jc88/edit?usp=sharing" 
-									style="color:#e0533d" target="_blank">Google Docs Review Sheet</a> 
+									target="_blank">Google Docs Review Sheet</a> 
 									(comment permissions are enabled)</li>
+
 								</ul>
 							<li>Programming:</li>
 								<ul>
-								<li><a href="https://codeforces.com/" style="color:#e0533d" 
-									target="_blank">Codeforces</a></li>
-								<li><a href="http://www.usaco.org/" style="color:#e0533d" 
-									target="_blank">USACO</a></li>
+								<li><a href="https://codeforces.com/" target="_blank">Codeforces</a></li>
+
+								<li><a href="http://www.usaco.org/" target="_blank">USACO</a></li>
 								</ul>
 							
 						</ul>
