--- a/desc/current_events.html
+++ b/desc/current_events.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Current Events</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color:#fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -45,32 +45,34 @@
 								style="color:#e0533d">Current Events Twitter</a></li>
 							<li>Recommended Sites and Sources:
 								<ul>
-									<li><a href="https://www.texastribune.org/" style="color:#e0533d" target="_blank">
-										Texas Tribune</a></li>
-									<li><a href="http://www.mystatesman.com/" style="color:#e0533d" target="_blank">
-										Austin American-Statesman</a></li>
-									<li><a href="https://www.dallasnews.com/" style="color:#e0533d" target="_blank">
-										Dallas Morning News</a></li>
-									<li><a href="http://www.chron.com/" style="color:#e0533d" target="_blank">
-										Houston Chronicle</a></li>
-									<li><a href="https://www.nytimes.com/" style="color:#e0533d" target="_blank">
-										New York Times</a></li>
-									<li><a href="https://www.washingtonpost.com/" style="color:#e0533d" target="_blank">
-										Washington Post</a></li>
-									<li><a href="https://www.usatoday.com/" style="color:#e0533d" target="_blank">
-										USA Today</a></li>
-									<li><a href="http://www.bbc.com/news" style="color:#e0533d" target="_blank">
-										BBC</a></li>
-									<li><a href="http://www.pbs.org/newshour/" style="color:#e0533d" target="_blank">
-										PBS News Hour</a></li>
-									<li><a href="http://www.npr.org/" style="color:#e0533d" target="_blank">
-										National Public Radio</a></li>
-									<li><a href="http://www.cnn.com/" style="color:#e0533d" target="_blank">
-										CNN</a></li>
-									<li><a href="http://www.msnbc.com/" style="color:#e0533d" target="_blank">
-										MSNBC</a></li>
-									<li><a href="http://www.foxnews.com/" style="color:#e0533d" target="_blank">
-										Fox News</a></li>
+									<li><a href="https://www.texastribune.org/"target="_blank">Texas Tribune</a></li>
+
+									<li><a href="http://www.mystatesman.com/" target="_blank">Austin American-Statesman
+										</a></li>
+
+									<li><a href="https://www.dallasnews.com/" target="_blank">Dallas Morning News
+										</a></li>
+
+									<li><a href="http://www.chron.com/" target="_blank">Houston Chronicle</a></li>
+
+									<li><a href="https://www.nytimes.com/" target="_blank">New York Times</a></li>
+
+									<li><a href="https://www.washingtonpost.com/" target="_blank">Washington Post
+										</a></li>
+
+									<li><a href="https://www.usatoday.com/" target="_blank">USA Today</a></li>
+
+									<li><a href="http://www.bbc.com/news" target="_blank">BBC</a></li>
+
+									<li><a href="http://www.pbs.org/newshour/" target="_blank">PBS News Hour</a></li>
+
+									<li><a href="http://www.npr.org/" target="_blank">National Public Radio</a></li>
+
+									<li><a href="http://www.cnn.com/" target="_blank">CNN</a></li>
+
+									<li><a href="http://www.msnbc.com/" target="_blank">MSNBC</a></li>
+
+									<li><a href="http://www.foxnews.com/" target="_blank">Fox News</a></li>
 								<ul>
 							</li>
 						</ul>
