--- a/desc/science.html
+++ b/desc/science.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Science</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color: #fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -54,15 +54,21 @@
 
 						<h4>Resources</h4>
 							<li><a href="https://docs.google.com/document/d/1IGtNLeaih5Dkkjaq_052apVOUmgKNyYujydRHWnM_uw/edit?usp=sharing" 
-								style="color:#e0533d" target="_blank">AP Bio from Warith's 21/22 BILL</a> 
+								target="_blank">AP Bio from Warith's 21/22 BILL</a> 
 								(comment permissions are enabled)</li>
+
 							<li><a href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
-								style="color:#e0533d" target="_blank">AP Chem Notes</a> 
+								target="_blank">AP Chem Notes</a> 
 								(some docs are not viewable w/o logging into AISD email)</li>
+
 							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
 								by Richard Feynman</li>
+
 							<li><a href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
-								style="color:#e0533d" target="_blank">2022-2023 Physics Topic List</a></li>
+								target="_blank">2022-2023 Physics Topic List</a></li>
+
+							<li><a href="https://www.overleaf.com/read/mmgpndxvnzfp target="_blank">Physics Notes by Eric Yang
+								</a></li>
 					</section>
 				</div>
 			</div>
