--- a/desc/social_studies.html
+++ b/desc/social_studies.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Social Studies</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color:#fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -37,7 +37,7 @@
 						<h4>Resources</h4>
 						<ul>
 							<li><a href="https://www.uiltexas.org/files/academics/FINAL_2022-2023_Social_Studies_Reading_List_and_Terms_8_1_22_(2).pdf" 
-								style="color:#e0533d" target="_blank">2022-2023 Reading List (WWI to the Great Depression)
+								target="_blank">2022-2023 Reading List (WWI to the Great Depression)
 								</a></li>
 						</ul>
 					</section>
