--- a/sched.html
+++ b/sched.html
@@ -12,9 +12,9 @@
 		<header>
 			<h1>UIL Schedule</h1>
 			<nav>
-				<a href="index.html" class>Home</a>
-				<a href="subj.html" class>Subjects</a>
-				<a href="sched.html" class="active">Schedule</a>
+				<a href="index.html" style="color:#fff" class>Home</a>
+				<a href="subj.html" style="color:#fff" class>Subjects</a>
+				<a href="sched.html" style="color:#fff" class="active">Schedule</a>
 			</nav>
 		</header>
 		<main>
@@ -28,11 +28,13 @@
 								<th>Wednesdays</th>
 								<th>Fridays</th>
 							</tr>
+
 							<tr>
 								<td><u>Computer Science</u><br>Lowery Lower E Pod<br>*Every Other Week</td>
 								<td rowspan="2"><u>Science</u><br>Lowery Lower E Pod</td>
 								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ B110</td>
 							</tr>
+
 							<tr>
 								<td><u>Spelling</u><br>AHS @ F224</td>
 								<td><u>Current Events</u><br>Lowery Lower E Pod</td>
@@ -48,94 +50,122 @@
 								<td><b>VC#1</b></td>
 								<td>10/3 - 10/29</td>
 							</tr>
+
 							<tr class="complete">
 								<td><b><u>AMC 10/12 A</u></b></td>
 								<td>11/10</td>
 							</tr>
+
 							<tr class="complete">
 								<td><b><u>AMC 10/12 B</u></b></td>
 								<td>11/16</td>
 							</tr>
+
 							<tr class="complete">
 								<td><b>VC#2</b></td>
 								<td>11/14 - 12/10</td>
 							</tr>
+
 							<tr class="complete">
 								<td><b><u>USACO December</u></b></td>
 								<td>12/16 - 12/19</td>
 							</tr>
+
 							<tr>
 								<td><b>VC#3</b></td>
 								<td>1/9 - 1/28</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USACO January</u></b></td>
 								<td>1/27 - 1/30</td>
 							</tr>
+
 							<tr>
 								<td><b>Invitational A</b></td>
 								<td>1/28 @ Flower Mound 9th Grade Campus</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USABO Open Round</u></b></td>
 								<td>2/2</td>
 							</tr>
+
+							<tr>
+								<td><b><u>Texas A&M Science Bowl</u></b></td>
+								<td>2/4</td>
+							</tr>
+
 							<tr>
 								<td><b><u>F=ma</u></b></td>
 								<td>2/9</td>
 							</tr>
+
 							<tr>
 								<td><b>Invitational B</b></td>
 								<td>2/11 @ Rock Hill HS</td>
 							</tr>
+
 							<tr>
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
 							</tr>
+
 							<tr>
 								<td><b><u>AIME (II)</u></b></td>
 								<td>2/15</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USACO February</u></b></td>
 								<td>2/24 - 2/27</td>
 							</tr>
+
 							<tr>
 								<td><b><u>Local Chemistry Olympiad</u></b></td>
 								<td>TBA, typically late March</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USABO Semifinals</u></b></td>
 								<td>3/16</td>
 							</tr>
+
 							<tr>
 								<td><b>UIL Districts</b></td>
-								<td>3/23 - 3/25 @ Rock Hill HS (most likely)</td>
+								<td>3/23 - 3/25 @ Rock Hill HS</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USACO US Open</u></b></td>
 								<td>3//24 - 3/27</td>
 							</tr>
+
 							<tr>
 								<td><b>VC Regionals</b></td>
 								<td>4/3 - 4/18</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USAPhO</u></b></td>
 								<td>TBA, sometime mid-April</td>
 							</tr>
+
 							<tr>
 								<td><b><u>USNCO</u></b></td>
 								<td>TBA, between 4/15 and 4/23</td>
 							</tr>
+
 							<tr>
 								<td><b>UIL Regionals</b></td>
 								<td>4/21 - 4/22 @ Rock Hill HS</td>
 							</tr>
+
 							<tr>
 								<td><b>VC State</b></td>
 								<td>4/25 - 5/2</td>
 							</tr>
+
 							<tr>
 								<td><b>UIL State</b></td>
 								<td>5/17 - 5/18 @ UT Austin</td>
