--- a/subj.html
+++ b/subj.html
@@ -12,9 +12,9 @@
 		<header>
 			<h1>Academic UIL Competitions</h1>
 			<nav>
-				<a href="index.html" class>Home</a>
-				<a href="subj.html" class="active">Subjects</a>
-				<a href="sched.html" class>Schedule</a>
+				<a href="index.html" style="color:#fff" class>Home</a>
+				<a href="subj.html" style="color:#fff" class="active">Subjects</a>
+				<a href="sched.html" style="color:#fff" class>Schedule</a>
 			</nav>
 		</header>
 		<main style="background-color: #961b12">
