--- a/desc/literary_criticism.html
+++ b/desc/literary_criticism.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Literary Criticism</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color: #fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -38,7 +38,7 @@
 						<h4>Resources</h4>
 						<ul>
 							<li><a href="https://www.uiltexas.org/files/academics/RL2022-20231.pdf" 
-								style="color:#e0533d" target="_blank">2022-2023 Reading List</a></li>
+								target="_blank">2022-2023 Reading List</a></li>
 						</ul>
 					</section>
 				</div>
