--- a/desc/spelling.html
+++ b/desc/spelling.html
@@ -12,7 +12,7 @@
 		<header>
 			<h1>Spelling</h1>
 			<nav>
-				<a href="../subj.html" class>Back</a>
+				<a href="../subj.html" style="color:#fff" class>Back</a>
 			</nav>
 		</header>
 		<main>
@@ -40,22 +40,28 @@
 
 						<h4>Resources</h4>
 						<ul>
-							<li><a href="https://www.uiltexas.org/files/academics/WordPower_2022-23_revised.pdf" 
-								style="color:#e0533d">2022-2023 Word Power</a></li>
+							<li><a href="https://www.uiltexas.org/files/academics/WordPower_2022-23_revised.pdf">2022-2023 
+								Word Power</a></li>
+
 							<li>Official Dictionary: <i>The American Heritage Dictionary of the English Language, Fifth 
 								Edition: Fiftieth Anniversary Printing</i> 2018 (similar online version can be found 
-								<a href="https://ahdictionary.com/" style="color:#e0533d">here</a>)</li>
+								<a href="https://ahdictionary.com/">here</a>)</li>
+
 							<li>Knowts Flashcards for...</li>
 							<ul>
 								<li><a href="https://knowt.io/flashcards/e23feedd-e52e-42cc-996d-64d91e2f6724" 
-									style="color:#e0533d" target="_blank">Primary Definitions</a></li>
+									target="_blank">Primary Definitions</a></li>
+
 								<li><a href="https://knowt.io/flashcards/71ae47f9-7232-471a-8d49-52b8702bf120" 
-									style="color:#e0533d" target="_blank">Alternate Definitions</a></li>
+									target="_blank">Alternate Definitions</a></li>
+
 								<li><a href="https://knowt.io/flashcards/e59ef794-d670-4bb8-880a-8b0498ac14d7" 
-									style="color:#e0533d" target="_blank">Irregular Plural Forms</a></li>
+									target="_blank">Irregular Plural Forms</a></li>
+
 							</ul>
-							<li><a href="https://eyangch.github.io/uil-spelling/" style="color: #e0533d" 
-								target="_blank">Practice Site</a> (at least, until we get ASW)</li>
+
+							<li><a href="https://eyangch.github.io/uil-spelling/" target="_blank">Practice Site</a> 
+								(at least, until we get ASW)</li>
 						</ul>
 					</section>
 				</div>
