--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<header>
 			<h1>Allen Academic UIL</h1>
 			<nav>
-				<a href="index.html" class="active">Home</a>
-				<a href="subj.html" class>Subjects</a>
-				<a href="sched.html" class>Schedule</a>
+				<a href="index.html" style="color:#fff" class="active">Home</a>
+				<a href="subj.html" style="color:#fff" class>Subjects</a>
+				<a href="sched.html" style="color:#fff" class>Schedule</a>
 			</nav>
 		</header>
 		<main>
@@ -28,11 +28,10 @@
 						questions or suggestions you can contact me <a style="color: #000" 
 						href="https://warithr621.github.io/media.html"><u>here</u></a>.</p>
 						<p>By the way, <a 
-							href="https://drive.google.com/drive/folders/1gtCfNwZEVMHwKLcMb1uK-nMaLVpSHp6y?usp=sharing" 
-							style="color:#e0533d">this drive folder</a> should have a couple of past tests available for 
-							Calculator, Computer Science, General Math, Number Sense, and Science. You should also join the 
-							Discord server for more updates <a href="https://discord.gg/5zWEJhWtud" 
-							style="color:#e0533d">here</a>.</p>
+							href="https://drive.google.com/drive/folders/1gtCfNwZEVMHwKLcMb1uK-nMaLVpSHp6y?usp=sharing">
+							this drive folder</a> should have a couple of past tests available for Calculator, Computer 
+							Science, General Math, Number Sense, and Science. You should also join the Discord server for more 
+							updates <a href="https://discord.gg/5zWEJhWtud">here</a>.</p>
 						<br>
 						<h2>What is Academic UIL?</h2>
 						<p>UIL is the University Interscholastic League, founded as two separate competitions before merging under 
