--- a/desc/science.html
+++ b/desc/science.html
@@ -26,7 +26,7 @@
 						AP Chemistry, and apply many of the ideas to solve problems from lattice structure to thermodynamic 
 						favorability. Physics covers practically everything from the AP Physics series (1, 2, C Mech, C E&M) and 
 						more; this section tests a combination of problems from an annually assigned reading, Mechanics and E&M
-						problems, and wrapping it up with linearization. As there's three different subjects covered, contestants 
+						problems, and wrapping it up with linearization. As there are three different subjects covered, contestants 
 						can additionally advance from Districts to Regionals to State through an individual topic, placing 1st in 
 						the competition for one of the aforementioned subjects.</p>
 						<ul>
@@ -53,22 +53,38 @@
 						</ul>
 
 						<h4>Resources</h4>
-							<li><a href="https://docs.google.com/document/d/1IGtNLeaih5Dkkjaq_052apVOUmgKNyYujydRHWnM_uw/edit?usp=sharing" 
-								target="_blank">AP Bio from Warith's 21/22 BILL</a> 
-								(comment permissions are enabled)</li>
+							<h5>Biology</h5>
+							<ul>
+								<li><a href="https://docs.google.com/document/d/1IGtNLeaih5Dkkjaq_052apVOUmgKNyYujydRHWnM_uw/edit?usp=sharing" 
+									target="_blank">AP Bio from Warith's 21/22 BILL</a> 
+									(comment permissions are enabled)</li>
+								<li><i>Campbell Biology</i> 11th Edition</li>
+							</ul>
 
-							<li><a href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
-								target="_blank">AP Chem Notes</a> 
-								(some docs are not viewable w/o logging into AISD email)</li>
+							<h5>Chemistry</h5>
+							<ul>
+								<li><a href="https://drive.google.com/drive/folders/1ZzIzEef6SGjYGkuH6fIBae7dNbiG2R7n?usp=sharing" 
+									target="_blank">AP Chem Notes</a> 
+									(some docs are not viewable w/o logging into AISD email)</li>
 
-							<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
-								by Richard Feynman</li>
+								<li><a href="https://chem.libretexts.org/Bookshelves">Chemistry LibreTexts</a></li>
+							</ul>
 
-							<li><a href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
-								target="_blank">2022-2023 Physics Topic List</a></li>
+							<h5>Physics</h5>
+							<ul>
+								<li>2022-2023 Physics Book: <i>QED: The Strange Theory of Light and Matter</i> 
+									by Richard Feynman</li>
 
-							<li><a href="https://www.overleaf.com/read/mmgpndxvnzfp target="_blank">Physics Notes by Eric Yang
-								</a></li>
+								<li><a href="https://www.uiltexas.org/files/academics/Physics-Director-Notes-2022-2023.pdf" 
+									target="_blank">2022-2023 Physics Topic List</a></li>
+
+								<li>OpenStax <a href="https://openstax.org/books/college-physics/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units"
+									target="_blank"><i>College Physics</i></li>
+
+								<li><a href="https://docs.google.com/document/d/1MEwJeOkqCpbIS94lG1Nobapq43j62eHWrkVVespq-PU/edit?usp=sharing" 
+									target="_blank">UIL Physics Notes by Warith Rahman</a> 
+									(created based on the OpenStax books above)</li>
+							</ul>
 					</section>
 				</div>
 			</div>
