results page, minor coach edits, tamu bowl loc

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 				<a href="index.html" style="color:#fff" class="active">Home</a>
 				<a href="subj.html" style="color:#fff" class>Subjects</a>
 				<a href="sched.html" style="color:#fff" class>Schedule</a>
+				<a href="https://allen-uil.github.io/comp-history/" style="color:#fff" class>AHS Results</a>
 			</nav>
 		</header>
 		<main>
