--- a/sched.html
+++ b/sched.html
@@ -15,6 +15,7 @@
 				<a href="index.html" style="color:#fff" class>Home</a>
 				<a href="subj.html" style="color:#fff" class>Subjects</a>
 				<a href="sched.html" style="color:#fff" class="active">Schedule</a>
+				<a href="https://allen-uil.github.io/comp-history/" style="color:#fff" class>AHS Results</a>
 			</nav>
 		</header>
 		<main>
@@ -93,7 +94,7 @@
 
 							<tr>
 								<td><b><u>Texas A&M Science Bowl</u></b></td>
-								<td>2/4</td>
+								<td>2/4 @ Texas A&M University</td>
 							</tr>
 
 							<tr>
