--- a/subj.html
+++ b/subj.html
@@ -15,6 +15,7 @@
 				<a href="index.html" style="color:#fff" class>Home</a>
 				<a href="subj.html" style="color:#fff" class="active">Subjects</a>
 				<a href="sched.html" style="color:#fff" class>Schedule</a>
+				<a href="https://allen-uil.github.io/comp-history/" style="color:#fff" class>AHS Results</a>
 			</nav>
 		</header>
 		<main style="background-color: #961b12">
