--- a/desc/calculator.html
+++ b/desc/calculator.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Ms. Gesh <font size="+1"><u>dawn.geshwender@allenisd.org</u></font></h2>
+				<h2>Student Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>As the name might suggest, this competition revolves a lot around calculators. Calculator's a 
