--- a/sched.html
+++ b/sched.html
@@ -72,7 +72,7 @@
 								<td>12/16 - 12/19</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b>VC#3</b></td>
 								<td>1/9 - 1/28</td>
 							</tr>
