--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<h2>How do I join?</h2>
 						<p>If school just started at the time you're reading this, the UIL info meeting would probably be in late 
 						August or early September, most likely at Lowery. If the meeting had already happened, you could try either 
-						asking someone who you know is in UIL, or try emailing Ms. Gesh at dawn.geshwender@allenisd.org</a> 
+						asking someone who you know is in UIL, or try emailing Mrs. Tuerck at nada.tuerck@allenisd.org</a> 
 							for more info on how to join.</p>
 						<br>
 						<h2>When are competitions?</h2>
