--- a/sched.html
+++ b/sched.html
@@ -72,17 +72,17 @@
 								<td>12/16 - 12/19</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#3</b></td>
 								<td>1/9 - 1/28</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b><u>USACO January</u></b></td>
 								<td>1/27 - 1/30</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>Invitational A</b></td>
 								<td>1/28 @ Flower Mound 9th Grade Campus</td>
 							</tr>
