--- a/sched.html
+++ b/sched.html
@@ -77,7 +77,7 @@
 								<td>1/9 - 1/28</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b><u>USACO January</u></b></td>
 								<td>1/27 - 1/30</td>
 							</tr>
