USABO done + no scibowl ;-;

--- a/sched.html
+++ b/sched.html
@@ -87,14 +87,9 @@
 								<td>1/28 @ Flower Mound 9th Grade Campus</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USABO Open Round</u></b></td>
 								<td>2/2</td>
-							</tr>
-
-							<tr>
-								<td><b><u>Texas A&M Science Bowl</u></b></td>
-								<td>2/4 @ Texas A&M University</td>
 							</tr>
 
 							<tr>
