changed coaches + removed chem bcz yeah

--- a/desc/general_math.html
+++ b/desc/general_math.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Student Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font></h2>
+				<h2>Coach: Mrs. Tuerck <font size="+1"><u>nada.tuerck@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Math in general! If you've seen TMSCA middle school tests, think about it as those with like 20 times 
