--- a/desc/journalism.html
+++ b/desc/journalism.html
@@ -17,8 +17,10 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Coach: Ms. Smith <font size="+1"><u>elizabeth.smith@allenisd.org</u></font></h2>
-				<h2>Student Point of Contact: Carl Hu <font size="+1"><u>carl.hu@student.allenisd.org</u></font></h2>
+				<h2>Points of Contact: <ul>
+					<li> Ms. Smith <font size="+1"><u>elizabeth.smith@allenisd.org</u></font> </li>
+					<li> Ms. St. Clair <font size="+1"><u>kiara.stclair@allenisd.org</u></font> </li>
+				</ul></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>This page actually has a couple of contests together, but they're pretty similar in competition style 
