--- a/desc/literary_criticism.html
+++ b/desc/literary_criticism.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Point of Contact: Blake Maulsby <font size="+1"><u>blake.maulsby@student.allenisd.org</u></font></h2>
+				<h2>Coach: Mr. Hart <font size="+1"><u>joshua.hart@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>Literary Criticism is about analyzing famous literary works and knowledge of literary terms & history. 
