--- a/desc/number_sense.html
+++ b/desc/number_sense.html
@@ -17,7 +17,7 @@
 		</header>
 		<main>
 			<div class="container">
-				<h2>Student Point of Contact: Warith Rahman <font size="+1"><u>warith.rahman@student.allenisd.org</u></font></h2>
+				<h2>Coach: Mrs. Tuerck <font size="+1"><u>nada.tuerck@allenisd.org</u></font></h2>
 				<div class="row">
 					<section class="col-md-8 col-xl-9">
 						<p>This competition is quite literally the definition of speed. Number Sense is a test of quickly solving 
