F=ma passed, InvB passed, VC4 opens tmrw

--- a/sched.html
+++ b/sched.html
@@ -92,23 +92,23 @@
 								<td>2/2</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>F=ma</u></b></td>
 								<td>2/9</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>Invitational B</b></td>
 								<td>2/11 @ Rock Hill HS</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
 							</tr>
 
 							<tr>
-								<td><b><u>AIME (II)</u></b></td>
+								<td><b><u>AIME II</u></b></td>
 								<td>2/15</td>
 							</tr>
 
