messed up update + added HP to sched

--- a/sched.html
+++ b/sched.html
@@ -102,12 +102,12 @@
 								<td>2/11 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="complete">
+							<tr class="progress">
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>AIME II</u></b></td>
 								<td>2/15</td>
 							</tr>
@@ -115,6 +115,11 @@
 							<tr>
 								<td><b><u>USACO February</u></b></td>
 								<td>2/24 - 2/27</td>
+							</tr>
+							
+							<tr>
+								<td><b>TMSCA Meet ("Invitational C")</b></td>
+								<td>3/4 @ Highland Park</td>
 							</tr>
 
 							<tr>
