sched upd + usaco is practically here

--- a/sched.html
+++ b/sched.html
@@ -31,14 +31,17 @@
 							</tr>
 
 							<tr>
-								<td><u>Computer Science</u><br>Lowery Lower E Pod<br>*Every Other Week</td>
-								<td rowspan="2"><u>Science</u><br>Lowery Lower E Pod</td>
-								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ B110</td>
+								<td rowspan="3"><u>Computer Science</u><br>Lowery @ Lower D Pod<br>*Every Other Week</td>
+								<td rowspan="3"><u>Science</u><br>Lowery @ Lower E Pod</td>
+								<td><u>Math (NS, CAL, GM)</u><br>Lowery @ Lower D Pod</td>
 							</tr>
 
 							<tr>
+								<td><u>Current Events</u><br>AHS @ F224</td>
+							</tr>
+							
+							<tr>
 								<td><u>Spelling</u><br>AHS @ F224</td>
-								<td><u>Current Events</u><br>Lowery Lower E Pod</td>
 							</tr>
 						</table>
 						<br><br>
@@ -112,7 +115,7 @@
 								<td>2/15</td>
 							</tr>
 
-							<tr>
+							<tr class="progress">
 								<td><b><u>USACO February</u></b></td>
 								<td>2/24 - 2/27</td>
 							</tr>
