--- a/sched.html
+++ b/sched.html
@@ -115,7 +115,7 @@
 								<td>2/15</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b><u>USACO February</u></b></td>
 								<td>2/24 - 2/27</td>
 							</tr>
