VC4 practically done + HP in two days oop

--- a/sched.html
+++ b/sched.html
@@ -105,7 +105,7 @@
 								<td>2/11 @ Rock Hill HS</td>
 							</tr>
 
-							<tr class="progress">
+							<tr class="complete">
 								<td><b>VC#4</b></td>
 								<td>2/13 - 3/4</td>
 							</tr>
@@ -120,8 +120,8 @@
 								<td>2/24 - 2/27</td>
 							</tr>
 							
-							<tr>
-								<td><b>TMSCA Meet ("Invitational C")</b></td>
+							<tr class="complete">
+								<td><b>TMSCA Meet</b></td>
 								<td>3/4 @ Highland Park</td>
 							</tr>
 
