Blake camp tmrw trust

--- a/sched.html
+++ b/sched.html
@@ -125,7 +125,7 @@
 								<td>3/4 @ Highland Park</td>
 							</tr>
 
-							<tr>
+							<tr class="complete">
 								<td><b><u>USABO Semifinals</u></b></td>
 								<td>3/16</td>
 							</tr>
